--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -4,7 +4,8 @@
 # model remove the '{}' from the fixture names and add the columns immediately
 # below each fixture, per the syntax in the comments below
 #
-one:
+confirmed_user:
  email: user_one@example.com
  first_name: test first name
  last_name: test last name
+ encrypted_password: <%= Devise::Encryptor.digest(User, 'password') %>
